feat: project dashbard summary
